# HoaLibrary-SuperCollider

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md  compile_commands.json  copy_script.sh  make_tar.sh
Tester/: HoaTester.scd  HoaTester2D.scd  HoaTester3D.scd
header/: scDecoder.hpp  scEncoder.hpp
src/: Decoder.cpp  Encoder.cpp  Optim.cpp  loader.cpp
src/sc/Classes/: .Decoder.sc.swp  Decoder.sc  Encoder.sc  Optim.sc
src/sc/HelpSource/Classes/: Decoder2D.schelp
